//SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION. All rights reserved.

//Licensed under the Apache License, Version 2.0 (the "License");
//you may not use this file except in compliance with the License.
//You may obtain a copy of the License at

//http://www.apache.org/licenses/LICENSE-2.0

//Unless required by applicable law or agreed to in writing, software
//distributed under the License is distributed on an "AS IS" BASIS,
//WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
//See the License for the specific language governing permissions and
//limitations under the License.

//SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package router;

option go_package = "go.corp.nvidia.com/osmo/proto/router;router";

// ============================================================================
// USER SERVICE MESSAGES
// ============================================================================

// UserFrame is the message exchanged between CLI users and the router.
//
// PROTOCOL:
// 1. First frame MUST be init (parsed by router for session setup)
// 2. All subsequent frames are payload (forwarded transparently, zero-copy)
// 3. Stream close (CloseSend/EOF) signals end of tunnel
//
// IMPORTANT: This is tightly coupled with wire.go in the router_go package.
// The payload field MUST have tag 2 to match AgentFrame for zero-copy forwarding.
message UserFrame {
  oneof frame {
    // Init message - only valid as the first frame.
    // Router parses this to establish the session.
    UserInit init = 1;

    // Raw payload bytes - all frames after init.
    // Router forwards these transparently without parsing.
    bytes payload = 2;
  }
}

// UserInit is the first message sent by users to establish a tunnel session.
// Users MUST specify an operation to indicate what they want to do.
message UserInit {
  string session_key = 1;
  string workflow_id = 2;

  // The operation to perform (required for users).
  oneof operation {
    ExecOperation exec = 3;
    PortForwardOperation port_forward = 4;
    WebSocketOperation web_socket = 5;
    RsyncOperation rsync = 6;
  }
}

// ============================================================================
// AGENT SERVICE MESSAGES
// ============================================================================

// AgentFrame is the message exchanged between osmo-ctrl agents and the router.
//
// IMPORTANT: This is tightly coupled with wire.go in the router_go package.
// The payload field MUST have tag 2 to match UserFrame for zero-copy forwarding.
message AgentFrame {
  oneof frame {
    // Init message - only valid as the first frame.
    // Router parses this to match with a waiting user.
    AgentInit init = 1;

    // Raw payload bytes - all frames after init.
    // Router forwards these transparently without parsing.
    bytes payload = 2;
  }
}

// AgentInit is the first message sent by agents to join a tunnel session.
// Agents provide session_key and workflow_id to rendezvous with a waiting user.
// The operation is determined by the user who initiated the tunnel.
message AgentInit {
  string session_key = 1;
  string workflow_id = 2;
}

// ExecOperation is the operation to execute a command on a remote machine.
message ExecOperation {
  // The command to execute on the remote machine.
  string command = 1;
}

// PortForwardOperation is the operation to forward a port from a remote task to a client.
message PortForwardOperation {

  // Possible protocols for port forwarding.
  enum Protocol {
    UNSPECIFIED = 0;
    TCP = 1;
    UDP = 2;
  }

  // The protocol to use for the port forward.
  Protocol protocol = 1;

  // The port on the remote task to forward FROM.
  int32 port = 2;
}

// WebSocketOperation is the operation to proxy a WebSocket connection
// from a remote task to a client.
message WebSocketOperation {}

// RsyncOperation is the operation to proxy rsync operations between a
// remote task and a client.
message RsyncOperation {}

// Control service messages

// SessionInfoRequest is the request to the control service to get information about a session.
message SessionInfoRequest {
  string session_key = 1;
}

// SessionInfoResponse is the response to the SessionInfoRequest.
message SessionInfoResponse {
  // Whether the session is active.
  bool active = 1;

  // The workflow ID of the session.
  string workflow_id = 2;

  // The creation timestamp of the session.
  int64 created_at = 3;

  // The operation type of the session.
  string operation_type = 4;
}

// TerminateSessionRequest is the request to forcibly terminate a session.
message TerminateSessionRequest {
  // The session key to terminate.
  string session_key = 1;

  // Optional reason for termination (logged but not sent to peers).
  string reason = 2;
}

// TerminateSessionResponse is the response to the TerminateSessionRequest.
message TerminateSessionResponse {
  // Whether the session was found and terminated.
  bool terminated = 1;
}
