//SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION. All rights reserved.

//Licensed under the Apache License, Version 2.0 (the "License");
//you may not use this file except in compliance with the License.
//You may obtain a copy of the License at

//http://www.apache.org/licenses/LICENSE-2.0

//Unless required by applicable law or agreed to in writing, software
//distributed under the License is distributed on an "AS IS" BASIS,
//WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
//See the License for the specific language governing permissions and
//limitations under the License.

//SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package router;

import "src/proto/router/messages.proto";

option go_package = "go.corp.nvidia.com/osmo/proto/router;router";

// RouterClientService handles connections from CLI clients
service RouterClientService {
  // Tunnel establishes the client endpoint for any operation. Client sends init,
  // then bidirectional streaming begins.
  rpc Tunnel(stream TunnelMessage) returns (stream TunnelMessage);
}

// RouterAgentService handles connections from osmo-ctrl agents. Agents send
// TunnelMessage frames and the router streams TunnelMessage frames back so both
// legs share the same schemas without conversion.
service RouterAgentService {
  // Tunnel establishes the agent endpoint for any operation. Agent sends init,
  // then bidirectional streaming begins.
  rpc Tunnel(stream TunnelMessage) returns (stream TunnelMessage);
}

// RouterControlService provides auxiliary operations
service RouterControlService {
  // GetSessionInfo retrieves information about an active session
  rpc GetSessionInfo(SessionInfoRequest) returns (SessionInfoResponse);

  // TerminateSession forcibly terminates an active session
  rpc TerminateSession(TerminateSessionRequest) returns (TerminateSessionResponse);
}
